# synx-format

./: .gitignore  CHANGELOG.md  Cargo.toml  EDITING.md  LICENSE  README.md  package-vsix.ps1  publish-cpp.bat  publish-crates.bat  publish-csharp.bat  publish-kotlin.bat  publish-mojo.bat  publish-npm.bat  publish-pypi.bat  publish-swift.bat
.github/actions/synx/: action.yml
.github/workflows/: bindings-smoke.yml  python-wheels.yml
_guides/: GUIDE.md  GUIDE_DE.md  GUIDE_ES.md  GUIDE_JA.md  GUIDE_RU.md  GUIDE_ZH.md
benchmarks/: README.md  bench_node.js  bench_python.py  config.json  config.synx  config.yaml  package-lock.json  package.json  results_big_llm_limit20.txt  results_big_meta.txt  results_big_node.txt  results_big_python.txt  results_big_python_build.txt  results_big_rust.txt  results_big_summary.md  results_node.json  results_python.json
benchmarks/bench_rust/: Cargo.toml
benchmarks/bench_rust/benches/: parse.rs
benchmarks/llm-tests/: GUIDE.md  QUICKSTART.md
benchmarks/rust/: Cargo.toml
benchmarks/rust/benches/: parse.rs
bindings/c-header/: Cargo.toml
bindings/c-header/include/: synx.h
bindings/c-header/src/: lib.rs
bindings/cpp/: CMakeLists.txt  README.md
bindings/cpp/examples/: minimal.cpp
bindings/cpp/include/synx/: synx.hpp
bindings/go/: README.md  go.mod  synx.go  synx_test.go
bindings/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
bindings/mojo/: README.md
bindings/mojo/examples/: demo.mojo
bindings/mojo/synx/: interop.mojo
bindings/node/: Cargo.toml  index.js  package.json  smoke.js
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/swift/: Package.swift  README.md
bindings/swift/Sources/CSynx/: module.modulemap  synx.h
bindings/swift/Sources/Synx/: SynxEngine.swift
bindings/swift/Tests/SynxTests/: SynxTests.swift
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
crates/as-cli/: Cargo.toml
crates/as-cli/src/: main.rs
crates/synx-cli/: Cargo.toml
crates/synx-cli/src/: main.rs  pkg.rs
crates/synx-core/: Cargo.toml
crates/synx-core/fuzz/: Cargo.toml  README.md
crates/synx-core/fuzz/fuzz_targets/: fuzz_compile.rs  fuzz_format.rs  fuzz_parse.rs
crates/synx-core/fuzz/scripts/: prune_coverage_html.py  synx_fuzz_replay.py
crates/synx-core/src/: binary.rs  calc.rs  diff.rs  engine.rs  lib.rs  parser.rs  schema_json.rs  signing.rs  value.rs  wasm.rs
crates/synx-core/tests/: conformance.rs
crates/synx-format/: Cargo.toml
crates/synx-format/src/: lib.rs
crates/synx-lsp/: Cargo.toml  README.md
crates/synx-lsp/src/: main.rs
docs/: README.md  SYNX_AT_A_GLANCE.md  repository-layout.md
docs/anthropic/: anthropic-system-prompt.txt  anthropic-token-notes.md  claude.md
docs/dev/: README.md  plugins-roadmap.md
docs/guides/: GUIDE.md  GUIDE_DE.md  GUIDE_ES.md  GUIDE_JA.md  GUIDE_RU.md  GUIDE_ZH.md  long-context-synx.md
docs/spec/: CORE-FREEZE.md  SPECIFICATION.md  SPECIFICATION_EN.md  SPECIFICATION_RU.md  SYNX-3.6-NORMATIVE.md
examples/: active_config.synx  static_config.synx  terrains.synx  wasm_markers_demo.synx
examples/ai-memory/: README.md  core.synx  state.synx
examples/docker-stack/: docker-compose.yml
examples/docker-stack/scripts/: render-nginx.js
integrations/: README.md
integrations/ai/: README.md
integrations/ai/synx-adapter/: README.md  RUST.md
integrations/ai/synx-adapter/nodejs/: README.md  package.json
integrations/ai/synx-adapter/python/: pyproject.toml
integrations/ai/synx-adapter/python/synx_adapter/: __init__.py  anthropic_tools.py  cli_compress.py  core.py  langchain.py  llama_index.py
integrations/artifacts/synx-visualizer/: README.md  SynxVisualizer.tsx
integrations/mcp/: README.md
integrations/mcp/synx-mcp/: README.md  package-lock.json  package.json
integrations/mcp/synx-mcp/src/: index.js  sandbox.js
integrations/neovim/synx.nvim/: README.md
integrations/neovim/synx.nvim/ftdetect/: synx.vim
integrations/sublime-text/Synx/: README.md  synx.sublime-syntax
integrations/visualstudio/synx-visualstudio/: README.md  package-vsix.ps1  publish-marketplace.ps1
integrations/visualstudio/synx-visualstudio/SynxLanguageService/: SynxLanguageService.csproj  SynxPackage.cs  extension.vsixmanifest  source.extension.vsixmanifest
integrations/vscode/synx-vscode/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
integrations/vscode/synx-vscode/src/: commands.ts  completion.ts  diagnostics.ts  extension.ts  formatter.ts  nesting-colors.ts  parser.ts
integrations/vscode/synx-vscode/syntaxes/: synx.tmLanguage.json
integrations/vscode/synx-vscode/themes/: synx-icon-theme.json
parsers/: README.md
parsers/dotnet/: README.md  Synx.sln
parsers/dotnet/src/Synx.Core/: Synx.Core.csproj  SynxBinary.cs  SynxDiff.cs  SynxEngine.Core.cs  SynxEngine.Markers.cs  SynxFormat.cs  SynxFormatter.cs  SynxJson.cs  SynxMeta.cs  SynxParseResult.cs  SynxParser.cs  SynxSafeCalc.cs  (+3 more)
scripts/: verify-release-quality.ps1  verify-release-quality.sh
synx_packages/: README.md
synx_packages/@assynx/text-tools/: Cargo.toml  README.md  build.sh  synx-pkg.synx
synx_packages/template/: Cargo.toml  README.md  build.sh  synx-pkg.synx
synx_packages/template/src/: lib.rs
tests/conformance/: README.md
tests/conformance/cases/: 001-scalar-types.expected.json  001-scalar-types.synx  002-nested-objects.expected.json  002-nested-objects.synx  003-arrays.expected.json  003-arrays.synx  004-type-casting.expected.json  004-type-casting.synx  005-comments.synx  006-multiline.expected.json  006-multiline.synx  007-mixed-nested.expected.json  007-mixed-nested.synx  008-string-with-spaces.expected.json  008-string-with-spaces.synx  009-empty-values.expected.json  009-empty-values.synx  010-tool-mode.expected.json  010-tool-mode.synx  011-llm-directive.expected.json  011-llm-directive.synx  012-use-directive.expected.json  012-use-directive.synx
tree-sitter-synx/: README.md  grammar.js  package.json
tree-sitter-synx/queries/: folds.scm  highlights.scm
(+22 files in other folders)
