[workspace]
resolver = "2"
members = [
    "crates/synx-core",
    "bindings/c-header",
    "bindings/node",
    "bindings/python",
    "bindings/wasm",
    "benchmarks/bench_rust",
]

[workspace.package]
version = "3.5.2"
edition = "2021"
license = "MIT"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
