[workspace]
resolver = "2"
members = [
    "crates/synx-core",
    "crates/synx-format",
    "crates/synx-cli",
    "crates/synx-lsp",
    "bindings/c-header",
    "bindings/node",
    "bindings/python",
    "bindings/wasm",
    "benchmarks/rust",
]

[workspace.package]
version = "3.6.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
