[package]
name = "synx-c"
version = "3.6.1"
edition = "2021"
authors = ["APERTURESyndicate <support@aperturesyndicate.com>"]
description = "SYNX C FFI — shared library for embedding SYNX in any language"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
synx-core = { path = "../../crates/synx-core", features = ["serde", "wasm"] }
serde_json = "1"
