[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "synx-format"
version = "3.6.0"
description = "SYNX: The Active Data Format — faster than JSON, cheaper for AI tokens, built-in logic."
readme = "../../README.md"
license = { text = "MIT" }
authors = [
  { name = "APERTURESyndicate", email = "support@aperturesyndicate.com" },
]
keywords = ["synx", "parser", "config", "data-format", "active"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/APERTURESyndicate/synx-format"
Repository = "https://github.com/APERTURESyndicate/synx-format"

[tool.maturin]
module-name = "synx_native"
features = ["pyo3/extension-module"]
