[package]
name = "synx-wasm"
version = "3.6.0"
edition = "2021"
authors = ["APERTURESyndicate <support@aperturesyndicate.com>"]
description = "SYNX WebAssembly module — parse SYNX in the browser"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
synx-core = { path = "../../crates/synx-core", features = ["serde"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1"

