[package]
name = "synx-cli"
version = "3.6.0"
edition = "2021"
authors = ["APERTURESyndicate <support@aperturesyndicate.com>"]
description = "SYNX CLI — parse, validate, convert, diff, query, compile .synx files."
license = "MIT"
repository = "https://github.com/APERTURESyndicate/synx-format"
keywords = ["synx", "cli", "config", "parser"]
categories = ["command-line-utilities"]

[[bin]]
name = "synx"
path = "src/main.rs"

[dependencies]
synx-core = { path = "../synx-core", features = ["serde", "jsonschema"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
