[package]
name = "synx-core"
version = "3.4.0"
edition = "2021"
authors = ["APERTURESyndicate <support@aperturesyndicate.com>"]
description = "SYNX — The Active Data Format. Core parser + engine with full !active support."
license = "MIT"
repository = "https://github.com/kaiserrberg/synx-format"
keywords = ["synx", "parser", "config", "json-alternative", "data-format"]
categories = ["parser-implementations", "config"]

[dependencies]
memchr = "2"
itoa = "1"
ryu = "1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]

