[package]
name = "synx-core"
version = "3.6.0"
edition = "2021"
authors = ["APERTURESyndicate <support@aperturesyndicate.com>"]
description = "SYNX — The Active Data Format. Core parser + engine with full !active support."
license = "MIT"
repository = "https://github.com/APERTURESyndicate/synx-format"
keywords = ["synx", "parser", "config", "json-alternative", "data-format"]
categories = ["parser-implementations", "config"]

[dependencies]
memchr = "2"
itoa = "1"
ryu = "1"
miniz_oxide = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"
jsonschema = { version = "0.30", optional = true }

[features]
default = []
serde = ["dep:serde"]
jsonschema = ["dep:jsonschema"]

[dev-dependencies]

