[package]
name = "synx-format"
version = "3.6.0"
edition = "2021"
authors = ["APERTURESyndicate <support@aperturesyndicate.com>"]
description = "SYNX — The Active Data Format (meta crate). Re-exports synx-core under a format-oriented crate name."
license = "MIT"
repository = "https://github.com/APERTURESyndicate/synx-format"
keywords = ["synx", "parser", "config", "json-alternative", "data-format"]
categories = ["parser-implementations", "config"]

[dependencies]
synx-core = { path = "../synx-core", version = "=3.6.0" }

