[package]
name = "synx-lsp"
version = "3.6.0"
edition = "2021"
authors = ["APERTURESyndicate <support@aperturesyndicate.com>"]
description = "SYNX Language Server — LSP diagnostics, completion, and document symbols for .synx files."
license = "MIT"
repository = "https://github.com/APERTURESyndicate/synx-format"
keywords = ["synx", "lsp", "language-server"]
categories = ["development-tools"]

[[bin]]
name = "synx-lsp"
path = "src/main.rs"

[dependencies]
synx-core = { path = "../synx-core" }
tower-lsp-server = { version = "0.23", features = ["runtime-tokio"] }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
serde_json = "1"
