[package]
name = "synx-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
synx-core = { path = ".." }

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false

[[bin]]
name = "fuzz_compile"
path = "fuzz_targets/fuzz_compile.rs"
doc = false

[[bin]]
name = "fuzz_format"
path = "fuzz_targets/fuzz_format.rs"
doc = false

[workspace]
